Fix the a bug on the json format. Fix the readability on dev page.

--- a/app/elements/dev-question/dev-question.css
+++ b/app/elements/dev-question/dev-question.css
@@ -1,5 +1,4 @@
 #main {
-  background-color: #e1e1e1;
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
 }
